After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 693591 - certificate extensions are not decoded anymore
certificate extensions are not decoded anymore
Status: RESOLVED FIXED
Product: gcr
Classification: Core
Component: General
git master
Other Linux
: Normal normal
: ---
Assigned To: GNOME keyring maintainer(s)
GNOME keyring maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2013-02-11 14:03 UTC by tg
Modified: 2019-02-22 11:57 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
fix (1.70 KB, patch)
2013-02-11 14:03 UTC, tg
none Details | Review
fix2 (5.56 KB, patch)
2013-02-11 14:04 UTC, tg
none Details | Review
Make gcr oids work between ui and base libraries (5.81 KB, patch)
2013-02-11 14:36 UTC, Stef Walter
committed Details | Review

Description tg 2013-02-11 14:03:52 UTC
Created attachment 235703 [details] [review]
fix

certificate extensions are not decoded since the separation between base/ui
Comment 1 tg 2013-02-11 14:04:40 UTC
Created attachment 235704 [details] [review]
fix2
Comment 2 Stef Walter 2013-02-11 14:36:27 UTC
Created attachment 235706 [details] [review]
Make gcr oids work between ui and base libraries

Gabor, made one change, and reverted the bit which opens up the export symbols regex. Could you test this new patch and verify that it still fixes the problem? Will push when I hear back from you.
Comment 3 tg 2013-02-14 15:20:21 UTC
seems to work
Comment 4 Stef Walter 2013-02-14 15:23:52 UTC
Attachment 235706 [details] pushed as 546f155 - Make gcr oids work between ui and base libraries