Make gcr oids work between ui and base libraries

https://bugzilla.gnome.org/show_bug.cgi?id=693591