gcr/gcr-parser.c
@@ -185,8 +185,6 @@ init_quarks (void)
 {
 	static volatile gsize quarks_inited = 0;
 
-	_gcr_oids_init ();
-
 	if (g_once_init_enter (&quarks_inited)) {
 
 		#define QUARK(name, value) \
